--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BBS">
         <activity
-            android:name=".MainActivity"
+            android:name=".start"
             android:label="@string/app_name"
             android:theme="@style/Theme.BBS.NoActionBar">
             <intent-filter>
@@ -19,6 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Main2Activity"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.BBS.NoActionBar">
+        </activity>
+        <activity android:name=".ui.login.Register"></activity>
+        <activity android:name=".ui.login.ShowIcon"></activity>
     </application>
 
 </manifest>
