--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         </activity>
         <activity android:name=".ui.login.Register"></activity>
         <activity android:name=".ui.login.ShowIcon"></activity>
+        <activity android:name=".ui.personal.UpdatePassword"></activity>
     </application>
 
 </manifest>
