新增显示帖子全文功能

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ui.login.Register"></activity>
         <activity android:name=".ui.login.ShowIcon"></activity>
         <activity android:name=".ui.personal.UpdatePassword"></activity>
+        <activity android:name=".ui.home.PostDetail"></activity>
     </application>
 
 </manifest>
