--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ui.login.ShowIcon"></activity>
         <activity android:name=".ui.personal.UpdatePassword"></activity>
         <activity android:name=".ui.home.PostDetail"></activity>
+        <activity android:name=".ui.home.CommentDetail"></activity>
     </application>
 
 </manifest>
