修改了一点小细节，将改用户信息和改用户密码分开进行，目前只写了界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
         <activity android:name=".ui.personal.MyPostShow"></activity>
         <activity android:name=".ui.personal.MyPostDetail"></activity>
         <activity android:name=".ui.personal.UpdateMyPost"></activity>
+        <activity android:name=".ui.personal.UpdatePersonPassword"></activity>
         <activity android:name=".ui.home.PostDetail"></activity>
         <activity android:name=".ui.home.CommentDetail"></activity>
     </application>
