--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,13 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bbs">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_permission_config"
+        android:usesCleartextTraffic="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BBS">
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/network_permission_config" />
+
         <activity
             android:name=".start"
             android:label="@string/app_name"
@@ -22,18 +33,18 @@
         <activity
             android:name=".Main2Activity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.BBS.NoActionBar">
-        </activity>
-        <activity android:name=".ui.login.Register"></activity>
-        <activity android:name=".ui.login.ShowIcon"></activity>
-        <activity android:name=".ui.personal.UpdatePersonDetail"></activity>
-        <activity android:name=".ui.personal.MyCommentDetail"></activity>
-        <activity android:name=".ui.personal.MyPostShow"></activity>
-        <activity android:name=".ui.personal.MyPostDetail"></activity>
-        <activity android:name=".ui.personal.UpdateMyPost"></activity>
-        <activity android:name=".ui.personal.UpdatePersonPassword"></activity>
-        <activity android:name=".ui.home.PostDetail"></activity>
-        <activity android:name=".ui.home.CommentDetail"></activity>
+            android:theme="@style/Theme.BBS.NoActionBar"></activity>
+        <activity android:name=".ui.login.Register" />
+        <activity android:name=".ui.login.ShowIcon" />
+        <activity android:name=".ui.personal.UpdatePersonDetail" />
+        <activity android:name=".ui.personal.MyCommentDetail" />
+        <activity android:name=".ui.personal.MyPostShow" />
+        <activity android:name=".ui.personal.MyPostDetail" />
+        <activity android:name=".ui.personal.UpdateMyPost" />
+        <activity android:name=".ui.personal.UpdatePersonPassword" />
+        <activity android:name=".ui.home.PostDetail" />
+        <activity android:name=".ui.home.CommentDetail" />
+        <activity android:name=".ui.setting.MusicShow" />
     </application>
 
 </manifest>
